<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="24dp"
    android:layout_marginVertical="10dp"
    android:layout_gravity="center"
    card_view:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="16dp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/iv_item_photo"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/story_image"
                android:transitionName="image"
                card_view:layout_constraintTop_toTopOf="@id/tv_item_name"
                tools:srcCompat="@drawable/dreamy_story"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/story_user"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:transitionName="name"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/cardView" />

        <TextView
            android:id="@+id/tv_item_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/story_time"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:padding="4dp"
            android:transitionName="time"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tv_item_name" />

        <TextView
            android:id="@+id/tv_item_description"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:text="@string/story_desc"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:transitionName="desc"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tv_item_time" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>